[gd_scene load_steps=7 format=3 uid="uid://b5nc0bk41mlgb"]

[ext_resource type="Script" uid="uid://cojffhixhl5w6" path="res://entities/enemies/boss/beholder.gd" id="1_gywki"]
[ext_resource type="Texture2D" uid="uid://dqjd7jrk8ww4k" path="res://assets/art/enemies/boss/beholder.png" id="2_rvf2r"]
[ext_resource type="PackedScene" uid="uid://hx0v5hqvqkmy" path="res://components/health_component/health_component.tscn" id="3_ftxxm"]
[ext_resource type="PackedScene" uid="uid://qowfj0gbi6t4" path="res://components/faction_component/faction_component.tscn" id="4_faction"]
[ext_resource type="PackedScene" path="res://components/pathfinding/pathfinding_component.tscn" id="5_pathfind"]
[ext_resource type="PackedScene" uid="uid://touch_damage_component" path="res://components/damage/touch_damage_component.tscn" id="6_damage"]
[ext_resource type="PackedScene" uid="uid://dptvykd5bxq0a" path="res://components/hurtbox/hurtbox_component.tscn" id="7_hurtbox"]
[ext_resource type="PackedScene" path="res://components/health_bar/health_bar.tscn" id="8_health_bar"]

[sub_resource type="CircleShape2D" id="CircleShape2D_6ke77"]
radius = 32.06244

[node name="Beholder" type="CharacterBody2D" groups=["boss", "enemy"]]
collision_layer = 1
collision_mask = 8
motion_mode = 1
script = ExtResource("1_gywki")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_rvf2r")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_6ke77")

[node name="HealthComponent" parent="." instance=ExtResource("3_ftxxm")]
max_health = 1000

[node name="HealthBar" parent="." instance=ExtResource("8_health_bar")]
bar_width = 64.0
bar_height = 6.0
offset_y = 50.0

[node name="FactionComponent" parent="." instance=ExtResource("4_faction")]
faction = 1

[node name="PathfindingComponent" parent="." instance=ExtResource("5_pathfind")]
repath_interval = 0.5
waypoint_distance = 32.0

[node name="TouchDamageComponent" parent="." instance=ExtResource("6_damage")]
damage = 15

[node name="HurtboxComponent" parent="." instance=ExtResource("7_hurtbox")]

[node name="CollisionShape2D" parent="HurtboxComponent" index="0"]
shape = SubResource("CircleShape2D_6ke77")

[node name="DamageArea" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageArea"]
shape = SubResource("CircleShape2D_6ke77")
